tests/paczka2/big_fuzzy/78128448.err
Error in line 8: ByUzaRZil A33 15,2
Error in line 7: 93G5 A380 88,9
Error in line 28: 9LK6NpLQM A380 4,0
Error in line 32: A380 S318 89,9
Error in line 33: A380 A33 32,5
Error in line 23: LCBwb S318 87,6
Error in line 38: ByUzaRZil A69 17,1
Error in line 35: cVHvt S318 3,7
Error in line 44: cVHvt A33 60,8
Error in line 42: ByUzaRZil S318 9,3
Error in line 55: A380 S318 49,9
Error in line 56: ByUzaRZil A380 66,2
Error in line 65: cVHvt A33 82,6
Error in line 69: ByUzaRZil A33 31,7
Error in line 68: A380 S318 6,6
Error in line 58: 9LK6NpLQM A69 16,2
Error in line 77: LCBwb A69 2%,3
Error in line 81: cVHvt A69 43,5
Error in line 88: 39zIyH8b S318 13,22
Error in line 85: cVHvt A33 45,2
Error in line 83: 39zIyH8b S318 20,7
Error in line 94: LCBwb A33 90,94
Error in line 113: A380 A33 57,08
Error in line 114: A380 A69 76,5
Error in line 111: 93G5 S318 67,7
Error in line 115: A380 A33 23,9
Error in line 128: LCBwb A69 74,3
Error in line 125: ByUzaRZil A33 69,9
Error in line 134: LCBwb S318 47,8
Error in line 137: LCBwb A33 22,6
Error in line 140: LCBwb A380 6,3
Error in line 161: 39zIyH8b A33 -2,2
Error in line 144: A380 A69 0,9
Error in line 166: LCBwb S318 96,2
Error in line 160: 39zIyH8b A33 89,8
Error in line 184: 9LK6NpLQM A33 -2,3
Error in line 177: ByUzaRZil S318 87,0
Error in line 185: ByUzaRZil A380 45,9
Error in line 173: LCBwb A33 17,9
Error in line 190: LCBwb S318 74,0
Error in line 180: 9LK6NpLQM A33 29,1
Error in line 196: LCBwb A33 90,8
Error in line 183: 93G5 A380 234,3
Error in line 199: LCBwb S318 74,0
Error in line 207: 93G5 S318 49,9
Error in line 205: LCBwb A380 86,5
Error in line 206: ByUzaRZil A380 55,6
Error in line 212: 39zIyH8b S318 76,7
Error in line 235: 9LK6NpLQM S318 37,4
Error in line 240: A380 S318 97,7
Error in line 241: A380 A69 47,2
Error in line 242: A380 A380 44,0
